# webdocx-mcp

./: AGENTS.md  README.md  __init__.py  launch_mcp.sh  pyproject.toml  test_orchestration.py
docs/: ARCHITECTURE.md  REQUIREMENTS.md  TOOLS.md
src/devlens/: server.py
src/devlens/adapters/: duckduckgo.py
src/devlens/utils/: orchestrator.py
src/webdocx/: __init__.py  server.py
src/webdocx/adapters/: __init__.py  duckduckgo.py  scraper.py
src/webdocx/models/: __init__.py  document.py  errors.py  search.py
src/webdocx/tools/: __init__.py  advanced.py  research.py  scraper.py  search.py
src/webdocx/utils/: __init__.py  orchestrator.py
